[gd_scene load_steps=9 format=3 uid="uid://n4j5k3xkctim"]

[ext_resource type="Script" path="res://scripts/e_mon_char.gd" id="1_jm336"]
[ext_resource type="Texture2D" uid="uid://b0plclo7ur8b4" path="res://sprites/entity_sprite/mon/spark_demon_combined.png" id="2_2jloi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1if8x"]
size = Vector2(9, 11)

[sub_resource type="Animation" id="Animation_8dts3"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l6w1f"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_2a4sv"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_qtgue"]
resource_name = "swap"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [3, 0, 3, 0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hc5gv"]
_data = {
"RESET": SubResource("Animation_8dts3"),
"attack": SubResource("Animation_l6w1f"),
"hit": SubResource("Animation_2a4sv"),
"swap": SubResource("Animation_qtgue")
}

[node name="e_mon_char" type="CharacterBody2D"]
scale = Vector2(-1, 1)
script = ExtResource("1_jm336")
team_name = "enemy"

[node name="mon_collision" type="CollisionShape2D" parent="."]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_1if8x")

[node name="mon_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2jloi")
centered = false
hframes = 4

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hc5gv")
}

[connection signal="animation_finished" from="anim_player" to="." method="_on_anim_player_animation_finished"]
